--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 @media screen and (min-width: 160px) {
+  .logo-desktop {
+    display: none; }
+
   body {
     background-color: white; }
 
@@ -13,7 +16,7 @@
     width: 50%; }
 
   .video-wrapper {
-    margin-top: 10%;
+    margin-top: 5%;
     position: relative;
     padding-bottom: 56.25%; }
     .video-wrapper iframe {
@@ -24,7 +27,9 @@
       left: 0; }
 
   .socials {
-    text-align: center; }
+    text-align: center;
+    margin-top: 5%;
+    margin-bottom: 5%; }
     .socials .fa-stack {
       display: inline-block; }
       .socials .fa-stack .fa-stack-2x {
@@ -38,12 +43,16 @@
     font-size: 14px;
     margin-top: 15%; }
 
-  .static {
+  #static {
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
     color: #818285;
     margin-top: 10%;
     font-size: 10px;
     font-style: italic;
-    text-align: center; } }
+    text-align: center; }
+    #static a {
+      text-decoration: none; } }
 @media screen and (min-width: 480px) {
   body {
     background-color: white; }
@@ -52,7 +61,9 @@
     width: 100%; }
 
   .logo {
-    margin-top: 5%;
+    max-height: 170px;
+    max-width: 581px;
+    margin-top: 3%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -72,9 +83,12 @@
     display: block; }
 
   footer #socialtext {
+    margin-top: 3%;
+    margin-right: 5%;
     display: inline-block;
-    margin-top: 5%;
-    color: #818285; }
+    color: #818285;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px; }
 
   .socials .fa-stack {
     display: inline-block;
@@ -85,8 +99,11 @@
       color: white; }
 
   #static {
-    color: #818285;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     font-style: italic;
     text-align: center;
-    margin-top: 5%; } }
+    margin-top: 5%;
+    color: #818285; }
+    #static a {
+      text-decoration: none; } }
